--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -529,6 +529,138 @@
   "reset_usage_confirm": "¿Está seguro de que desea reiniciar el conteo de mensajes de hoy?\n\nEsto solo debe usarse para propósitos de prueba.",
   "usage_reset": "Uso Reiniciado",
   "usage_reset_success": "El uso diario ha sido reiniciado.",
+  
+  "_comment_modern_ui": "Traducciones de UI Moderna y Tema",
+  "preferences": "Preferencias",
+  "menu_view": "Ver",
+  "theme": "Tema",
+  "light_theme": "Tema Claro",
+  "dark_theme": "Tema Oscuro",
+  "system_theme": "Tema del Sistema",
+  "system_default": "Predeterminado del Sistema",
+  "light_mode": "Modo Claro",
+  "dark_mode": "Modo Oscuro",
+  
+  "_comment_progress": "Traducciones del Diálogo de Progreso",
+  "operation_progress": "Progreso de Operación",
+  "operation_type": "Tipo",
+  "status": "Estado",
+  "started": "Iniciado",
+  "duration": "Duración",
+  "progress": "Progreso",
+  "overall_progress": "Progreso General",
+  "current_step": "Paso Actual",
+  "estimated_remaining": "Tiempo Restante Estimado",
+  "estimated_completion": "Finalización Estimada",
+  "calculating": "Calculando...",
+  "initializing": "Inicializando...",
+  "operation_steps": "Pasos de Operación",
+  "operation_log": "Registro de Operación",
+  "pause": "Pausar",
+  "resume": "Reanudar",
+  "step_started": "Paso {step}: {name}",
+  "completed_successfully": "Completado exitosamente",
+  "completed_with_errors": "Completado con errores",
+  "operation_cancelled": "Operación cancelada",
+  "operation_paused": "Operación pausada",
+  "operation_resumed": "Operación reanudada",
+  
+  "_comment_preferences": "Traducciones del Diálogo de Preferencias",
+  "appearance": "Apariencia",
+  "interface": "Interfaz",
+  "keyboard_shortcuts": "Atajos de Teclado",
+  "accessibility": "Accesibilidad",
+  "advanced": "Avanzado",
+  "theme_settings": "Configuraciones de Tema",
+  "font_settings": "Configuraciones de Fuente",
+  "font_family": "Familia de Fuente",
+  "font_size": "Tamaño de Fuente",
+  "visual_effects": "Efectos Visuales",
+  "enable_animations": "Habilitar animaciones",
+  "show_tooltips": "Mostrar información sobre herramientas",
+  "high_contrast_mode": "Modo de alto contraste",
+  "window_layout": "Diseño de Ventana",
+  "layout_style": "Estilo de Diseño",
+  "standard_layout": "Estándar",
+  "compact_layout": "Compacto",
+  "wide_layout": "Ancho",
+  "minimal_layout": "Mínimo",
+  "remember_window_geometry": "Recordar tamaño y posición de ventana",
+  "remember_splitter_state": "Recordar tamaños de paneles",
+  "toolbar_settings": "Configuraciones de Barra de Herramientas",
+  "toolbar_position": "Posición de Barra de Herramientas",
+  "top": "Arriba",
+  "bottom": "Abajo",
+  "left": "Izquierda",
+  "right": "Derecha",
+  "show_toolbar": "Mostrar barra de herramientas",
+  "show_toolbar_text": "Mostrar texto en botones de barra de herramientas",
+  "icon_size": "Tamaño de Icono",
+  "status_bar_settings": "Configuraciones de Barra de Estado",
+  "show_status_bar": "Mostrar barra de estado",
+  "show_detailed_progress": "Mostrar información detallada de progreso",
+  "interface_mode": "Modo de Interfaz",
+  "compact_mode": "Modo compacto",
+  "keyboard_shortcuts_info": "Haga doble clic en un atajo para editarlo. Los cambios se aplican inmediatamente.",
+  "action": "Acción",
+  "shortcut": "Atajo",
+  "category": "Categoría",
+  "edit_shortcut": "Editar Atajo",
+  "reset_shortcut": "Restablecer Atajo",
+  "reset_all_shortcuts": "Restablecer Todos los Atajos",
+  "edit_keyboard_shortcut": "Editar Atajo de Teclado",
+  "reset_all_shortcuts_confirm": "¿Está seguro de que desea restablecer todos los atajos de teclado a sus valores predeterminados?",
+  "shortcut_reset_not_implemented": "La funcionalidad de restablecimiento de atajos aún no está implementada.",
+  "screen_reader_support": "Soporte de Lector de Pantalla",
+  "enable_screen_reader_support": "Habilitar soporte de lector de pantalla",
+  "enhanced_focus_indicators": "Indicadores de enfoque mejorados",
+  "visual_accessibility": "Accesibilidad Visual",
+  "use_large_fonts": "Usar fuentes grandes",
+  "input_accessibility": "Accesibilidad de Entrada",
+  "keyboard_navigation_only": "Solo navegación por teclado",
+  "voice_control_support": "Soporte de control por voz",
+  "accessibility_info_text": "Las características de accesibilidad ayudan a hacer que la aplicación sea utilizable para personas con discapacidades. Habilite las características que necesite para la mejor experiencia.",
+  "performance_settings": "Configuraciones de Rendimiento",
+  "performance_settings_info": "Las configuraciones de rendimiento estarán disponibles en versiones futuras.",
+  "debug_settings": "Configuraciones de Depuración",
+  "debug_settings_info": "Las configuraciones de depuración están disponibles para solucionar problemas.",
+  "import_preferences": "Importar Preferencias",
+  "export_preferences": "Exportar Preferencias",
+  "reset_to_defaults": "Restablecer a Predeterminados",
+  "apply": "Aplicar",
+  "confirm_reset": "Confirmar Restablecimiento",
+  "reset_preferences_confirm": "¿Está seguro de que desea restablecer todas las preferencias a sus valores predeterminados? Esta acción no se puede deshacer.",
+  "success": "Éxito",
+  "error": "Error",
+  "preferences_imported_successfully": "Preferencias importadas exitosamente.",
+  "preferences_exported_successfully": "Preferencias exportadas exitosamente.",
+  "preferences_reset_successfully": "Preferencias restablecidas a predeterminados exitosamente.",
+  "failed_to_import_preferences": "Error al importar preferencias: {error}",
+  "failed_to_export_preferences": "Error al exportar preferencias: {error}",
+  "info": "Información",
+  
+  "_comment_toolbar": "Traducciones de Personalización de Barra de Herramientas",
+  "customize_toolbars": "Personalizar Barras de Herramientas",
+  "toolbars": "Barras de Herramientas",
+  "new_toolbar": "Nueva Barra de Herramientas",
+  "delete_toolbar": "Eliminar Barra de Herramientas",
+  "toolbar_name": "Nombre de Barra de Herramientas",
+  "delete_toolbar_confirm": "¿Está seguro de que desea eliminar la barra de herramientas '{name}'?",
+  "toolbar_properties": "Propiedades de Barra de Herramientas",
+  "name": "Nombre",
+  "position": "Posición",
+  "visible": "Visible",
+  "movable": "Movible",
+  "show_text": "Mostrar Texto",
+  "available_items": "Elementos Disponibles",
+  "current_toolbar_items": "Elementos de Barra de Herramientas Actual",
+  "toolbar_customization_instructions": "Arrastre elementos de la lista disponible a la lista de barra de herramientas actual para agregarlos. Use los botones para reordenar o eliminar elementos.",
+  "move_up": "Mover Arriba",
+  "move_down": "Mover Abajo",
+  "remove": "Eliminar",
+  "preview": "Vista Previa",
+  "toolbar_changes_applied_preview": "Los cambios de barra de herramientas se han aplicado. Puede ver los cambios en la ventana principal.",
+  "reset_toolbars_confirm": "¿Está seguro de que desea restablecer todas las barras de herramientas a su configuración predeterminada? Esta acción no se puede deshacer.",
 
   "_comment_missing_dialogs": "=== TRADUCCIONES DE DIÁLOGOS FALTANTES ===",
   
