--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -815,5 +815,137 @@
   
   "delivery_tracker_initialized": "Rastreador de entrega de mensagens inicializado",
   "webhook_manager_initialized": "Gerenciador de webhook WhatsApp inicializado",
-  "whatsapp_delivery_system_initialized": "Sistema de entrega WhatsApp inicializado"
+  "whatsapp_delivery_system_initialized": "Sistema de entrega WhatsApp inicializado",
+  
+  "_comment_modern_ui": "Traduções de UI Moderna e Tema",
+  "preferences": "Preferências",
+  "menu_view": "Visualizar",
+  "theme": "Tema",
+  "light_theme": "Tema Claro",
+  "dark_theme": "Tema Escuro",
+  "system_theme": "Tema do Sistema",
+  "system_default": "Padrão do Sistema",
+  "light_mode": "Modo Claro",
+  "dark_mode": "Modo Escuro",
+  
+  "_comment_progress": "Traduções do Diálogo de Progresso",
+  "operation_progress": "Progresso da Operação",
+  "operation_type": "Tipo",
+  "status": "Status",
+  "started": "Iniciado",
+  "duration": "Duração",
+  "progress": "Progresso",
+  "overall_progress": "Progresso Geral",
+  "current_step": "Passo Atual",
+  "estimated_remaining": "Tempo Restante Estimado",
+  "estimated_completion": "Conclusão Estimada",
+  "calculating": "Calculando...",
+  "initializing": "Inicializando...",
+  "operation_steps": "Passos da Operação",
+  "operation_log": "Log da Operação",
+  "pause": "Pausar",
+  "resume": "Retomar",
+  "step_started": "Passo {step}: {name}",
+  "completed_successfully": "Concluído com sucesso",
+  "completed_with_errors": "Concluído com erros",
+  "operation_cancelled": "Operação cancelada",
+  "operation_paused": "Operação pausada",
+  "operation_resumed": "Operação retomada",
+  
+  "_comment_preferences": "Traduções do Diálogo de Preferências",
+  "appearance": "Aparência",
+  "interface": "Interface",
+  "keyboard_shortcuts": "Atalhos de Teclado",
+  "accessibility": "Acessibilidade",
+  "advanced": "Avançado",
+  "theme_settings": "Configurações de Tema",
+  "font_settings": "Configurações de Fonte",
+  "font_family": "Família da Fonte",
+  "font_size": "Tamanho da Fonte",
+  "visual_effects": "Efeitos Visuais",
+  "enable_animations": "Habilitar animações",
+  "show_tooltips": "Mostrar dicas de ferramentas",
+  "high_contrast_mode": "Modo de alto contraste",
+  "window_layout": "Layout da Janela",
+  "layout_style": "Estilo do Layout",
+  "standard_layout": "Padrão",
+  "compact_layout": "Compacto",
+  "wide_layout": "Largo",
+  "minimal_layout": "Mínimo",
+  "remember_window_geometry": "Lembrar tamanho e posição da janela",
+  "remember_splitter_state": "Lembrar tamanhos dos painéis",
+  "toolbar_settings": "Configurações da Barra de Ferramentas",
+  "toolbar_position": "Posição da Barra de Ferramentas",
+  "top": "Topo",
+  "bottom": "Inferior",
+  "left": "Esquerda",
+  "right": "Direita",
+  "show_toolbar": "Mostrar barra de ferramentas",
+  "show_toolbar_text": "Mostrar texto nos botões da barra de ferramentas",
+  "icon_size": "Tamanho do Ícone",
+  "status_bar_settings": "Configurações da Barra de Status",
+  "show_status_bar": "Mostrar barra de status",
+  "show_detailed_progress": "Mostrar informações detalhadas de progresso",
+  "interface_mode": "Modo da Interface",
+  "compact_mode": "Modo compacto",
+  "keyboard_shortcuts_info": "Clique duas vezes em um atalho para editá-lo. As alterações são aplicadas imediatamente.",
+  "action": "Ação",
+  "shortcut": "Atalho",
+  "category": "Categoria",
+  "edit_shortcut": "Editar Atalho",
+  "reset_shortcut": "Redefinir Atalho",
+  "reset_all_shortcuts": "Redefinir Todos os Atalhos",
+  "edit_keyboard_shortcut": "Editar Atalho de Teclado",
+  "reset_all_shortcuts_confirm": "Tem certeza de que deseja redefinir todos os atalhos de teclado para seus valores padrão?",
+  "shortcut_reset_not_implemented": "A funcionalidade de redefinição de atalhos ainda não está implementada.",
+  "screen_reader_support": "Suporte a Leitor de Tela",
+  "enable_screen_reader_support": "Habilitar suporte a leitor de tela",
+  "enhanced_focus_indicators": "Indicadores de foco aprimorados",
+  "visual_accessibility": "Acessibilidade Visual",
+  "use_large_fonts": "Usar fontes grandes",
+  "input_accessibility": "Acessibilidade de Entrada",
+  "keyboard_navigation_only": "Apenas navegação por teclado",
+  "voice_control_support": "Suporte a controle por voz",
+  "accessibility_info_text": "Os recursos de acessibilidade ajudam a tornar o aplicativo utilizável para pessoas com deficiências. Habilite os recursos de que precisa para a melhor experiência.",
+  "performance_settings": "Configurações de Desempenho",
+  "performance_settings_info": "As configurações de desempenho estarão disponíveis em versões futuras.",
+  "debug_settings": "Configurações de Depuração",
+  "debug_settings_info": "As configurações de depuração estão disponíveis para solucionar problemas.",
+  "import_preferences": "Importar Preferências",
+  "export_preferences": "Exportar Preferências",
+  "reset_to_defaults": "Redefinir para Padrões",
+  "apply": "Aplicar",
+  "confirm_reset": "Confirmar Redefinição",
+  "reset_preferences_confirm": "Tem certeza de que deseja redefinir todas as preferências para seus valores padrão? Esta ação não pode ser desfeita.",
+  "success": "Sucesso",
+  "error": "Erro",
+  "preferences_imported_successfully": "Preferências importadas com sucesso.",
+  "preferences_exported_successfully": "Preferências exportadas com sucesso.",
+  "preferences_reset_successfully": "Preferências redefinidas para padrões com sucesso.",
+  "failed_to_import_preferences": "Falha ao importar preferências: {error}",
+  "failed_to_export_preferences": "Falha ao exportar preferências: {error}",
+  "info": "Informação",
+  
+  "_comment_toolbar": "Traduções de Personalização da Barra de Ferramentas",
+  "customize_toolbars": "Personalizar Barras de Ferramentas",
+  "toolbars": "Barras de Ferramentas",
+  "new_toolbar": "Nova Barra de Ferramentas",
+  "delete_toolbar": "Excluir Barra de Ferramentas",
+  "toolbar_name": "Nome da Barra de Ferramentas",
+  "delete_toolbar_confirm": "Tem certeza de que deseja excluir a barra de ferramentas '{name}'?",
+  "toolbar_properties": "Propriedades da Barra de Ferramentas",
+  "name": "Nome",
+  "position": "Posição",
+  "visible": "Visível",
+  "movable": "Móvel",
+  "show_text": "Mostrar Texto",
+  "available_items": "Itens Disponíveis",
+  "current_toolbar_items": "Itens da Barra de Ferramentas Atual",
+  "toolbar_customization_instructions": "Arraste itens da lista disponível para a lista da barra de ferramentas atual para adicioná-los. Use os botões para reordenar ou remover itens.",
+  "move_up": "Mover para Cima",
+  "move_down": "Mover para Baixo",
+  "remove": "Remover",
+  "preview": "Visualizar",
+  "toolbar_changes_applied_preview": "As alterações da barra de ferramentas foram aplicadas. Você pode ver as alterações na janela principal.",
+  "reset_toolbars_confirm": "Tem certeza de que deseja redefinir todas as barras de ferramentas para sua configuração padrão? Esta ação não pode ser desfeita."
 }
