feat: implement enhanced CSV import configuration dialog and fix PySide6 compatibility
Add comprehensive CSV import configuration system with flexible column
selection, template management, and channel-specific validation.

Features:
- CSV format configuration dialog with tabbed interface
- Intelligent column mapping with auto-detection
- Template saving and reuse functionality
- Channel-specific validation (email/WhatsApp requirements)
- Real-time preview of processed data
- Multi-language support (en/es/pt)

Components:
- CSVImportConfiguration class for configuration management
- CSVImportConfigDialog with 4-tab interface (file, mapping, preview, templates)
- Integration with existing main window CSV import workflow
- Template persistence using JSON storage

Technical details:
- Auto-detection of common column patterns (name, email, phone, company)
- Background CSV processing with threading
- Comprehensive validation with clear error messages
- Selective column import based on messaging channel requirements
- Template metadata tracking (usage count, last used)

PySide6 compatibility fixes:
- Move QAction import from QtWidgets to QtGui
- Remove non-existent QSeparator import
- Update QSizePolicy enum syntax to Policy.Expanding/Preferred
- Ensure compatibility with PySide6 6.9.1+

Testing:
- 7 unit tests for configuration functionality
- 7 integration tests for end-to-end workflows
- Interactive demo script with 5 usage scenarios
- All tests passing with comprehensive coverage

Localization:
- Added 45+ new translation strings
- Full support for English, Spanish, and Portuguese
- Context-aware translations for UI elements

Files added:
- src/multichannel_messaging/gui/csv_import_config_dialog.py
- tests/unit/test_csv_import_config_dialog.py
- tests/integration/test_csv_import_integration.py
- examples/csv_import_config_demo.py
- docs/summaries/csv_import_config_implementation.md

Files modified:
- src/multichannel_messaging/gui/main_window.py (integrate new dialog)

--- a/src/multichannel_messaging/localization/en.json
+++ b/src/multichannel_messaging/localization/en.json
@@ -952,5 +952,59 @@
   "database_not_found": "Database not found",
   "database_info_error": "Error loading database info: {error}",
   "charts_not_available": "Charts not available - install PySide6-Addons for chart support",
-  "auto_refresh": "Auto Refresh (30s)"
+  "auto_refresh": "Auto Refresh (30s)",
+
+  "_comment_csv_import_config": "=== CSV IMPORT CONFIGURATION DIALOG ===",
+  
+  "csv_import_configuration": "CSV Import Configuration",
+  "file_selection": "File Selection",
+  "csv_file": "CSV File:",
+  "browse": "Browse...",
+  "file_format_settings": "File Format Settings",
+  "encoding": "Encoding:",
+  "delimiter": "Delimiter:",
+  "first_row_headers": "First row contains headers",
+  "skip_rows": "Skip rows:",
+  "messaging_channels": "Messaging Channels",
+  "select_channels_info": "Select the messaging channels you plan to use. This determines which columns are required.",
+  "email_messaging": "Email messaging",
+  "whatsapp_messaging": "WhatsApp messaging",
+  "file_settings": "File Settings",
+  "column_mapping": "Column Mapping",
+  "column_mapping_instructions": "Map CSV columns to the required fields. Required fields are marked with a checkmark.",
+  "csv_column": "CSV Column",
+  "field_mapping": "Field Mapping",
+  "required": "Required",
+  "preview_data": "Preview Data",
+  "required_fields_for_channels": "Required fields for selected channels: {fields}",
+  "no_channels_selected": "No messaging channels selected",
+  "preview_validation": "Preview & Validation",
+  "refresh_preview": "Refresh Preview",
+  "validation_results": "Validation Results",
+  "configuration_valid": "✓ Configuration is valid",
+  "templates": "Templates",
+  "template_information": "Template Information",
+  "description": "Description:",
+  "available_templates": "Available Templates",
+  "last_used": "Last Used",
+  "usage_count": "Usage Count",
+  "load_template": "Load Template",
+  "save_as_template": "Save as Template",
+  "delete_template": "Delete Template",
+  "import_data": "Import Data",
+  "select_csv_file": "Select CSV File",
+  "preview_error": "Preview Error",
+  "preview_info": "Showing {shown} of {total} rows",
+  "select_template_to_load": "Please select a template to load.",
+  "template_file_not_found": "Template file not found.",
+  "template_loaded_successfully": "Template loaded successfully.",
+  "template_name_required": "Template name is required.",
+  "template_exists_overwrite": "A template with this name already exists. Do you want to overwrite it?",
+  "template_saved_successfully": "Template saved successfully.",
+  "template_deleted_successfully": "Template deleted successfully.",
+  "confirm_delete_template": "Are you sure you want to delete the template '{name}'?",
+  "fix_configuration_errors": "Please fix the configuration errors before importing.",
+  "no_data_to_import": "No data available to import. Please refresh the preview.",
+  "confirm": "Confirm",
+  "warning": "Warning"
 }
