--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -947,5 +947,59 @@
   
   "delivery_tracker_initialized": "Rastreador de entrega de mensajes inicializado",
   "webhook_manager_initialized": "Gestor de webhook WhatsApp inicializado",
-  "whatsapp_delivery_system_initialized": "Sistema de entrega WhatsApp inicializado"
+  "whatsapp_delivery_system_initialized": "Sistema de entrega WhatsApp inicializado",
+
+  "_comment_csv_import_config": "=== DIÁLOGO DE CONFIGURACIÓN DE IMPORTACIÓN CSV ===",
+  
+  "csv_import_configuration": "Configuración de Importación CSV",
+  "file_selection": "Selección de Archivo",
+  "csv_file": "Archivo CSV:",
+  "browse": "Examinar...",
+  "file_format_settings": "Configuración de Formato de Archivo",
+  "encoding": "Codificación:",
+  "delimiter": "Delimitador:",
+  "first_row_headers": "La primera fila contiene encabezados",
+  "skip_rows": "Omitir filas:",
+  "messaging_channels": "Canales de Mensajería",
+  "select_channels_info": "Seleccione los canales de mensajería que planea usar. Esto determina qué columnas son requeridas.",
+  "email_messaging": "Mensajería por email",
+  "whatsapp_messaging": "Mensajería por WhatsApp",
+  "file_settings": "Configuración de Archivo",
+  "column_mapping": "Mapeo de Columnas",
+  "column_mapping_instructions": "Mapee las columnas CSV a los campos requeridos. Los campos requeridos están marcados con una marca de verificación.",
+  "csv_column": "Columna CSV",
+  "field_mapping": "Mapeo de Campo",
+  "required": "Requerido",
+  "preview_data": "Vista Previa de Datos",
+  "required_fields_for_channels": "Campos requeridos para los canales seleccionados: {fields}",
+  "no_channels_selected": "No hay canales de mensajería seleccionados",
+  "preview_validation": "Vista Previa y Validación",
+  "refresh_preview": "Actualizar Vista Previa",
+  "validation_results": "Resultados de Validación",
+  "configuration_valid": "✓ La configuración es válida",
+  "templates": "Plantillas",
+  "template_information": "Información de Plantilla",
+  "description": "Descripción:",
+  "available_templates": "Plantillas Disponibles",
+  "last_used": "Último Uso",
+  "usage_count": "Contador de Uso",
+  "load_template": "Cargar Plantilla",
+  "save_as_template": "Guardar como Plantilla",
+  "delete_template": "Eliminar Plantilla",
+  "import_data": "Importar Datos",
+  "select_csv_file": "Seleccionar Archivo CSV",
+  "preview_error": "Error de Vista Previa",
+  "preview_info": "Mostrando {shown} de {total} filas",
+  "select_template_to_load": "Por favor seleccione una plantilla para cargar.",
+  "template_file_not_found": "Archivo de plantilla no encontrado.",
+  "template_loaded_successfully": "Plantilla cargada exitosamente.",
+  "template_name_required": "El nombre de la plantilla es requerido.",
+  "template_exists_overwrite": "Ya existe una plantilla con este nombre. ¿Desea sobrescribirla?",
+  "template_saved_successfully": "Plantilla guardada exitosamente.",
+  "template_deleted_successfully": "Plantilla eliminada exitosamente.",
+  "confirm_delete_template": "¿Está seguro de que desea eliminar la plantilla '{name}'?",
+  "fix_configuration_errors": "Por favor corrija los errores de configuración antes de importar.",
+  "no_data_to_import": "No hay datos disponibles para importar. Por favor actualice la vista previa.",
+  "confirm": "Confirmar",
+  "warning": "Advertencia"
 }
