--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -947,5 +947,59 @@
   "remove": "Remover",
   "preview": "Visualizar",
   "toolbar_changes_applied_preview": "As alterações da barra de ferramentas foram aplicadas. Você pode ver as alterações na janela principal.",
-  "reset_toolbars_confirm": "Tem certeza de que deseja redefinir todas as barras de ferramentas para sua configuração padrão? Esta ação não pode ser desfeita."
+  "reset_toolbars_confirm": "Tem certeza de que deseja redefinir todas as barras de ferramentas para sua configuração padrão? Esta ação não pode ser desfeita.",
+
+  "_comment_csv_import_config": "=== DIÁLOGO DE CONFIGURAÇÃO DE IMPORTAÇÃO CSV ===",
+  
+  "csv_import_configuration": "Configuração de Importação CSV",
+  "file_selection": "Seleção de Arquivo",
+  "csv_file": "Arquivo CSV:",
+  "browse": "Procurar...",
+  "file_format_settings": "Configurações de Formato de Arquivo",
+  "encoding": "Codificação:",
+  "delimiter": "Delimitador:",
+  "first_row_headers": "A primeira linha contém cabeçalhos",
+  "skip_rows": "Pular linhas:",
+  "messaging_channels": "Canais de Mensagem",
+  "select_channels_info": "Selecione os canais de mensagem que planeja usar. Isso determina quais colunas são obrigatórias.",
+  "email_messaging": "Mensagens por email",
+  "whatsapp_messaging": "Mensagens por WhatsApp",
+  "file_settings": "Configurações de Arquivo",
+  "column_mapping": "Mapeamento de Colunas",
+  "column_mapping_instructions": "Mapeie as colunas CSV para os campos obrigatórios. Campos obrigatórios são marcados com uma marca de verificação.",
+  "csv_column": "Coluna CSV",
+  "field_mapping": "Mapeamento de Campo",
+  "required": "Obrigatório",
+  "preview_data": "Visualização de Dados",
+  "required_fields_for_channels": "Campos obrigatórios para os canais selecionados: {fields}",
+  "no_channels_selected": "Nenhum canal de mensagem selecionado",
+  "preview_validation": "Visualização e Validação",
+  "refresh_preview": "Atualizar Visualização",
+  "validation_results": "Resultados da Validação",
+  "configuration_valid": "✓ A configuração é válida",
+  "templates": "Modelos",
+  "template_information": "Informações do Modelo",
+  "description": "Descrição:",
+  "available_templates": "Modelos Disponíveis",
+  "last_used": "Último Uso",
+  "usage_count": "Contador de Uso",
+  "load_template": "Carregar Modelo",
+  "save_as_template": "Salvar como Modelo",
+  "delete_template": "Excluir Modelo",
+  "import_data": "Importar Dados",
+  "select_csv_file": "Selecionar Arquivo CSV",
+  "preview_error": "Erro de Visualização",
+  "preview_info": "Mostrando {shown} de {total} linhas",
+  "select_template_to_load": "Por favor selecione um modelo para carregar.",
+  "template_file_not_found": "Arquivo de modelo não encontrado.",
+  "template_loaded_successfully": "Modelo carregado com sucesso.",
+  "template_name_required": "O nome do modelo é obrigatório.",
+  "template_exists_overwrite": "Já existe um modelo com este nome. Deseja sobrescrever?",
+  "template_saved_successfully": "Modelo salvo com sucesso.",
+  "template_deleted_successfully": "Modelo excluído com sucesso.",
+  "confirm_delete_template": "Tem certeza de que deseja excluir o modelo '{name}'?",
+  "fix_configuration_errors": "Por favor corrija os erros de configuração antes de importar.",
+  "no_data_to_import": "Nenhum dado disponível para importar. Por favor atualize a visualização.",
+  "confirm": "Confirmar",
+  "warning": "Aviso"
 }
